--- a/style.css
+++ b/style.css
@@ -252,3 +252,70 @@ input#check {
 .wrap-hero-home-page p {
     margin-bottom: 2rem;
 }
+/* Tarjetas de comida */
+.section{
+    max-width: 1200px;
+    margin: 8rem auto;
+    padding: 1rem;
+}
+
+.column-4{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    column-gap: 1rem;
+    row-gap: 1rem;
+}
+.tarjeta-rest{
+    background-repeat: no-repeat;
+    height: 400px;
+    border-radius: 6px;
+    padding: 1rem .5rem;
+    display: flex;
+    align-items: flex-end;
+}
+.wrap-text_tarjeta-rest{
+    color: #fff;
+    padding: .5rem;
+    border-radius: 6px;
+    background: linear-gradient(to top, rgb(0 0 0 /.5), rgb(0 0 0 /.5));
+}
+.wrap-text_tarjeta-rest p{
+    color: #f2f2f2;
+}
+.cta-wrap_tarjeta-rest{
+    display: flex;
+    justify-content: space-between;
+    margin: 1rem;
+}
+
+.precio_tarjeta-rest span{
+    font-size: 1.5rem;
+    font-weight: bold;
+}
+.cta_tarjeta-rest{
+    background-color: var(--main-c);
+    padding: .25rem 1rem;
+    border-radius: 4px;
+}
+.cta_tarjeta-rest a{
+    color: #fff;
+    font-weight: bold;
+}
+
+@media (max-width:1200px){
+    .column-4{
+        grid-template-columns: repeat(3, 1fr);
+    }
+}
+
+@media (max-width:880px){
+    .column-4{
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media (max-width:640px){
+    .column-4{
+        grid-template-columns: repeat(1, 1fr);
+    }
+}
