--- a/style.css
+++ b/style.css
@@ -252,20 +252,22 @@ input#check {
 .wrap-hero-home-page p {
     margin-bottom: 2rem;
 }
+
 /* Tarjetas de comida */
-.section{
+.section {
     max-width: 1200px;
     margin: 8rem auto;
     padding: 1rem;
 }
 
-.column-4{
+.column-4 {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     column-gap: 1rem;
     row-gap: 1rem;
 }
-.tarjeta-rest{
+
+.tarjeta-rest {
     background-repeat: no-repeat;
     height: 400px;
     border-radius: 6px;
@@ -273,62 +275,67 @@ input#check {
     display: flex;
     align-items: flex-end;
 }
-.wrap-text_tarjeta-rest{
+
+.wrap-text_tarjeta-rest {
     color: #fff;
     padding: .5rem;
     border-radius: 6px;
     background: linear-gradient(to top, rgb(0 0 0 /.5), rgb(0 0 0 /.5));
 }
-.wrap-text_tarjeta-rest p{
+
+.wrap-text_tarjeta-rest p {
     color: #f2f2f2;
 }
-.cta-wrap_tarjeta-rest{
+
+.cta-wrap_tarjeta-rest {
     display: flex;
     justify-content: space-between;
     margin: 1rem;
 }
 
-.precio_tarjeta-rest span{
+.precio_tarjeta-rest span {
     font-size: 1.5rem;
     font-weight: bold;
 }
-.cta_tarjeta-rest{
+
+.cta_tarjeta-rest {
     background-color: var(--main-c);
     padding: .25rem 1rem;
     border-radius: 4px;
 }
-.cta_tarjeta-rest a{
+
+.cta_tarjeta-rest a {
     color: #fff;
     font-weight: bold;
 }
 
-@media (max-width:1200px){
-    .column-4{
+@media (max-width:1200px) {
+    .column-4 {
         grid-template-columns: repeat(3, 1fr);
     }
 }
 
-@media (max-width:880px){
-    .column-4{
+@media (max-width:880px) {
+    .column-4 {
         grid-template-columns: repeat(2, 1fr);
     }
 }
 
-@media (max-width:640px){
-    .column-4{
+@media (max-width:640px) {
+    .column-4 {
         grid-template-columns: repeat(1, 1fr);
     }
 }
 
 /* Menu restaurante */
-.column-3{
+.column-3 {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     column-gap: 1rem;
     row-gap: 1rem;
 }
 
-.menu-restaurante{
+.menu-restaurante {
     color: #fff;
     background-repeat: no-repeat;
     border-radius: 6px;
@@ -336,49 +343,123 @@ input#check {
     flex-flow: column;
     align-items: center;
     justify-content: center;
-    height: 400px;
+    height: 500px;
     padding: 5px;
 }
 
-hr{
+hr {
     background: var(--main-c);
     height: 2px;
     width: 30px;
     border: none;
     margin: 14px;
-  }
+}
 
-.precio-menu{
+.precio-menu {
     font-weight: bold;
 }
-.precio-menu span{
+
+.precio-menu span {
     font-size: 2rem;
 }
 
-@media (max-width:880px){
-    .column-3{
+@media (max-width:880px) {
+    .column-3 {
         grid-template-columns: repeat(2, 1fr);
     }
 }
-@media (max-width:640px){
-    .column-3{
+
+@media (max-width:640px) {
+    .column-3 {
         grid-template-columns: repeat(1, 1fr);
     }
- 
+
 }
 
 /* Galeria de imangenes */
 
-.imagen-galeria, .imagen-galeria img{
+.imagen-galeria,
+.imagen-galeria img {
     max-width: 275px;
     border-radius: 4px;
 
 }
 
-@media (max-width:880px){
-    .galeria-platos{
-      display: flex;
-      flex-flow: wrap;
-      justify-content: center;
+@media (max-width:880px) {
+    .galeria-platos {
+        display: flex;
+        flex-flow: wrap;
+        justify-content: center;
     }
-  }
+}
+
+/* Blog */
+article.card {
+    max-width: 350px;
+    background-color: #f8f8f8;
+    margin: 1rem;
+    box-shadow: 0px 0px 12px #d7d7d7;
+}
+
+.header-card {
+    display: flex;
+}
+
+.header-card img {
+    border-radius: 8px 8px 0 0;
+    max-height: 200px;
+    height: 200px;
+    width: 100%;
+}
+
+.categoria-card {
+    margin-top: 1rem;
+}
+
+.categoria-card span {
+    background: var(--main-c);
+    border-radius: 4px;
+    padding: .2rem .5rem;
+    color: #fff;
+}
+
+.card footer {
+    display: flex;
+    flex-flow: column;
+    padding: 0 1rem;
+}
+
+.perfil-card {
+    display: flex;
+    align-items: center;
+}
+
+.img-perfil-card {
+    display: flex;
+}
+
+.img-perfil-card img {
+    width: 50px;
+    border-radius: 50%;
+    margin: 1rem 1rem 1rem 0;
+}
+
+.text-perfil-card {
+    display: flex;
+    flex-flow: column;
+}
+
+.text-perfil-card span:nth-child(2) {
+    color: #cfcfcf;
+}
+
+.card-wrap {
+    display: flex;
+    flex-flow: wrap;
+}
+
+@media (max-width:768px) {
+    .card-wrap {
+        justify-content: center;
+    }
+}
