--- a/style.css
+++ b/style.css
@@ -382,7 +382,11 @@ hr {
 .imagen-galeria img {
     max-width: 275px;
     border-radius: 4px;
-
+    display: flex;
+    grid-template-columns: repeat(4, 1fr);
+    grid-auto-rows: 150px;
+    object-fit: cover;
+    width: 100%;
 }
 
 @media (max-width:880px) {
